Correction IE8 et jsutement ie

--- a/trunk/www/themes/default/less/banners.less
+++ b/trunk/www/themes/default/less/banners.less
@@ -128,7 +128,7 @@
 }
 .banners-nav {
     position:absolute;
-    bottom:20px;
+    bottom:40px;
     left:0;
     width:100%;
     line-height:42px;
